--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,8 @@
     <a th:href="@{/register}" class="btn btn-primary btn-lg">
         Зарегистрироваться
     </a>
-
-
+<br>
+    <br>
+    <a th:href="@{/mentor}" class="btn btn-primary">Для ментора</a>
 </body>
 </html>
