--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+
+<div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+    <form th:action="@{/logout}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <button type="submit" class="btn btn-outline-danger">
+            <i class="bi bi-box-arrow-right"></i> Выйти
+        </button>
+    </form>
+</div>
+
 <h1>Admin, welcome Spring Security Application!!</h1>
 
 <br>
