--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,6 +7,19 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+  <form th:action="@{/logout}" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+    <button type="submit" class="btn btn-outline-danger">
+      <i class="bi bi-box-arrow-right"></i> Выйти
+    </button>
+  </form>
+</div>
+
+<div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+  <span th:text="${errorMessage}"></span>
+</div>
+
 <h1>Поиск</h1>
 <form th:action="@{/admin/user}" method="get">
   <label for="idInput">Введите ID:</label>
