--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,6 +7,16 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+
+<div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+    <form th:action="@{/logout}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <button type="submit" class="btn btn-outline-danger">
+            <i class="bi bi-box-arrow-right"></i> Выйти
+        </button>
+    </form>
+</div>
+
 <div class="container mt-4">
 
     <div class="alert alert-info" th:if="${user} != null">
@@ -36,6 +46,7 @@
     </tr>
     </tbody>
 </table>
-
+    <br>
+    <a th:href="@{/admin/main}" class="btn btn-primary">Я администратор</a>
 </body>
 </html>
