--- a/src/main/resources/templates/formRegister.html
+++ b/src/main/resources/templates/formRegister.html
@@ -20,8 +20,8 @@
     <input type="text" th:field="*{lastName}" class="form-control">
   </div>
   <div class="mb-3">
-  <label>Город: </label>
-  <input type="text" th:field="*{address}" class="form-control">
+    <label>Email:</label>
+    <input type="text" th:field="*{email}" class="form-control">
   </div>
 
   <div class="mb-3">
