--- a/src/main/resources/templates/mentor.html
+++ b/src/main/resources/templates/mentor.html
@@ -10,8 +10,8 @@
 
 <h1>Иван, добро пожаловать в Spring Security Application!</h1>
 
-<p>Вам предоставлен доступ с ролями ADNIN и USER</p>
-<p class="fs-5">Ваш логин:  ivan</p>
+<p>Вам предоставлен доступ с ролью ADMIN</p>
+<p class="fs-5">Ваш логин:  i@mail.ru</p>
 
 <p class="fs-5">Ваш пароль:  Единицы. Их количество соответствует количеству
     букв в Вашей фамилии, делённое на 2</p>
