--- a/src/main/resources/templates/userOfAdmin.html
+++ b/src/main/resources/templates/userOfAdmin.html
@@ -27,7 +27,7 @@
     <th scope="col">ID</th>
     <th scope="col">Name</th>
     <th scope="col">LastName</th>
-    <th scope="col">Address</th>
+    <th scope="col">Email</th>
     <th scope="col">Age</th>
     <th scope="col">Username</th>
     <th scope="col">Enabled</th>
@@ -41,7 +41,7 @@
     <td th:text="${user.id}"></td>
     <td th:text="${user.name}"></td>
     <td th:text="${user.lastName}"></td>
-    <td th:text="${user.address}"></td>
+    <td th:text="${user.email}"></td>
     <td th:text="${user.age}"></td>
     <td th:text="${user.username}"></td>
     <td th:text="${user.enabled}"></td>
